--- a/index.html
+++ b/index.html
@@ -257,6 +257,17 @@
         </div>
     </div>
 
+    <div id="globalContextMenu" class="dropdown-content extended-menu context-menu-fixed hidden">
+        <a href="javascript:void(0)" onclick="createFolder()"><i class="fa-solid fa-folder-plus"></i> Folder baru</a>
+        <hr class="menu-divider">
+        <a href="javascript:void(0)" onclick="triggerUploadModal()"><i class="fa-solid fa-file-arrow-up"></i> Upload file</a>
+        <a href="javascript:void(0)" onclick="triggerUploadModal()"><i class="fa-solid fa-folder-arrow-up"></i> Upload folder</a>
+        <hr class="menu-divider">
+        <a href="javascript:void(0)"><i class="fa-solid fa-file-word" style="color:#4285f4"></i> Google Dokumen</a>
+        <a href="javascript:void(0)"><i class="fa-solid fa-file-excel" style="color:#0f9d58"></i> Google Spreadsheet</a>
+        <a href="javascript:void(0)"><i class="fa-solid fa-file-powerpoint" style="color:#f4b400"></i> Google Slide</a>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
