--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
     </div>
 
-                <div id="contextMenu" class="context-menu-modern hidden">
+            <div id="contextMenu" class="context-menu-modern hidden">
             
             <div class="ctx-item" onclick="openCurrentItem()">
                 <i class="fa-solid fa-eye"></i>
@@ -260,6 +260,11 @@
             <div class="ctx-item" onclick="toggleStarItem()">
                 <i class="fa-solid fa-star" id="ctxStarIcon"></i>
                 <span id="ctxStarText">Tambahkan ke Berbintang</span>
+            </div>
+            <div class="ctx-item" onclick="alert('Fitur Pindahkan segera hadir!')">
+                <i class="fa-solid fa-folder-open"></i>
+                <span>Atur / Pindahkan</span>
+                <i class="fa-solid fa-caret-right ctx-arrow-right"></i>
             </div>
 
             <hr class="ctx-divider">
