--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
 
             <hr class="ctx-divider">
 
+            <div id="contextMenu" class="context-menu-modern hidden">
+            <hr class="ctx-divider">
+
             <div class="ctx-item ctx-danger" id="ctxTrashBtn" onclick="moveItemToTrash()">
                 <i class="fa-solid fa-trash-can"></i>
                 <span>Pindahkan ke Sampah</span>
