--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <div class="modal-body">
                         <h1 id="storageBigText" class="storage-big-text">0 MB</h1>
                         <p class="storage-sub-text">dari 2 GB telah digunakan</p>
-                        
+
                         <div class="multi-color-progress">
                             <div id="barImages" class="bar-segment bar-images"></div>
                             <div id="barVideos" class="bar-segment bar-videos"></div>
@@ -314,22 +314,10 @@
                         </div>
 
                         <div class="storage-legend">
-                            <div class="legend-item">
-                                <span class="dot dot-images"></span> Gambar 
-                                <span id="valImages" class="val-text">0 MB</span>
-                            </div>
-                            <div class="legend-item">
-                                <span class="dot dot-videos"></span> Video 
-                                <span id="valVideos" class="val-text">0 MB</span>
-                            </div>
-                            <div class="legend-item">
-                                <span class="dot dot-docs"></span> Dokumen 
-                                <span id="valDocs" class="val-text">0 MB</span>
-                            </div>
-                            <div class="legend-item">
-                                <span class="dot dot-others"></span> Lainnya 
-                                <span id="valOthers" class="val-text">0 MB</span>
-                            </div>
+                            <div class="legend-item"><span class="dot dot-images"></span> Gambar <span id="valImages" class="val-text">0 MB</span></div>
+                            <div class="legend-item"><span class="dot dot-videos"></span> Video <span id="valVideos" class="val-text">0 MB</span></div>
+                            <div class="legend-item"><span class="dot dot-docs"></span> Dokumen <span id="valDocs" class="val-text">0 MB</span></div>
+                            <div class="legend-item"><span class="dot dot-others"></span> Lainnya <span id="valOthers" class="val-text">0 MB</span></div>
                         </div>
                     </div>
                 </div>
