--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storage Tasks - Pro</title>
+    <title>Storage Tasks - Professional</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/appwrite@14.0.1"></script>
@@ -20,7 +20,11 @@
             </div>
             <form id="loginForm">
                 <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="loginEmail" placeholder="Username / Email" required></div>
-                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i></div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-key"></i>
+                    <input type="password" id="loginPass" placeholder="Password" required>
+                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i>
+                </div>
                 <button type="submit" class="btn-pill primary">Login</button>
                 <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
             </form>
@@ -33,9 +37,15 @@
             <form id="signupForm">
                 <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="regName" placeholder="Username" required></div>
                 <div class="pill-input"><i class="fa-solid fa-envelope"></i><input type="email" id="regEmail" placeholder="Email" required></div>
-                <div class="pill-input"><i class="fa-solid fa-phone"></i><input type="tel" id="regPhone" placeholder="Phone Number" required></div>
-                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="regPass" placeholder="Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regPass', this)"></i></div>
-                <div class="pill-input"><i class="fa-solid fa-check-circle"></i><input type="password" id="regVerify" placeholder="Verifikasi Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regVerify', this)"></i></div>
+                <div class="pill-input"><i class="fa-solid fa-phone"></i><input type="tel" id="regPhone" placeholder="Phone" required></div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-key"></i><input type="password" id="regPass" placeholder="Password" required>
+                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regPass', this)"></i>
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-check-circle"></i><input type="password" id="regVerify" placeholder="Verifikasi Password" required>
+                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regVerify', this)"></i>
+                </div>
                 <button type="submit" class="btn-pill primary">Sign Up</button>
                 <div class="auth-footer">Sudah punya akun? <span class="link-text" onclick="nav('loginPage')">Login</span></div>
             </form>
@@ -82,7 +92,7 @@
 
             <main class="main-content-area">
                 <div class="search-row">
-                    <div class="search-bar-pill" id="searchContainer">
+                    <div class="search-bar-pill">
                         <i class="fa-solid fa-magnifying-glass search-icon"></i>
                         <input type="text" id="searchInput" placeholder="Telusuri di Drive..." autocomplete="off">
                         <i class="fa-solid fa-xmark clear-icon hidden" id="clearSearchBtn" onclick="clearSearch()"></i>
@@ -136,7 +146,6 @@
 
     <div id="contextMenu" class="context-menu-modern hidden">
         <div class="ctx-item" onclick="openCurrentItem()"><i class="fa-solid fa-eye"></i><span>Pratinjau</span></div>
-        <hr class="ctx-divider">
         <div class="ctx-item" onclick="downloadCurrentItem()"><i class="fa-solid fa-download"></i><span>Download</span></div>
         <div class="ctx-item" onclick="renameCurrentItem()"><i class="fa-solid fa-pen"></i><span>Ganti nama</span></div>
         <hr class="ctx-divider">
