--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="auth-header">
                 <img src="logo.png" alt="Logo" class="auth-logo">
                 <h3>Login</h3>
-                <p class="auth-sub">Masuk untuk mengakses file Anda</p>
+                <!-- <p class="auth-sub">Masuk untuk mengakses file Anda</p> -->
             </div>
             <form id="loginForm">
                 <div class="pill-input">
