--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="auth-header">
                 <img src="logo.png" alt="Logo" class="auth-logo">
                 <h3>Sign Up</h3>
-                <p class="auth-sub">Buat akun baru dalam hitungan detik</p>
+                <!-- <p class="auth-sub">Buat akun baru dalam hitungan detik</p> -->
             </div>
             <form id="signupForm">
                 <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="regName" placeholder="Username" required></div>
