--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <a onclick="handleMenuClick(this, 'trash')" class="nav-item"><i class="fa-solid fa-trash-can"></i> Sampah</a>
                 </nav>
 
-                <div class="storage-widget" onclick="openStorageModal()" style="cursor: pointer;">
+                <div class="storage-widget" onclick="openStorageModal()" style="cursor: pointer;" title="Lihat detail penyimpanan">
                     <div class="storage-label"><i class="fa-solid fa-cloud"></i> Penyimpanan</div>
                     <div class="progress-track"><div id="storageBar" class="progress-fill"></div></div>
                     <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
@@ -124,6 +124,7 @@
                 </div>
                 
                 <div class="breadcrumb-area"><h2 id="headerTitle">Welcome In Drive</h2></div>
+                
                 <div id="fileGrid" class="file-grid-area"></div>
             </main>
         </div>
@@ -170,20 +171,46 @@
 
     <div id="storageModal" class="modal-overlay hidden" onclick="if(event.target === this) closeModal('storageModal')">
         <div class="glass-card modal-box storage-detail-box">
-            <div class="modal-header"><h3>Penyimpanan</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('storageModal')"></i></div>
+            <div class="modal-header">
+                <h3>Penyimpanan</h3>
+                <i class="fa-solid fa-xmark close-icon" onclick="closeModal('storageModal')"></i>
+            </div>
             <div class="modal-body">
-                <h1 id="storageBigText" class="storage-big-text">0 MB</h1>
-                <p class="storage-sub-text">dari 2 GB digunakan</p>
+                <div class="storage-summary">
+                    <h1 id="storageBigText">0 GB</h1>
+                    <p class="storage-sub-text">dari 2 GB digunakan</p>
+                </div>
+
                 <div class="multi-color-progress">
-                    <div id="barImages" class="bar-segment bar-images"></div><div id="barVideos" class="bar-segment bar-videos"></div>
-                    <div id="barDocs" class="bar-segment bar-docs"></div><div id="barOthers" class="bar-segment bar-others"></div>
+                    <div id="barImages" class="bar-segment bar-images" style="width: 0%"></div>
+                    <div id="barVideos" class="bar-segment bar-videos" style="width: 0%"></div>
+                    <div id="barDocs" class="bar-segment bar-docs" style="width: 0%"></div>
+                    <div id="barOthers" class="bar-segment bar-others" style="width: 0%"></div>
                 </div>
+
                 <div class="storage-legend">
-                    <div class="legend-item"><span class="dot dot-images"></span> Gambar <span id="valImages" class="val-text">0 MB</span></div>
-                    <div class="legend-item"><span class="dot dot-videos"></span> Video <span id="valVideos" class="val-text">0 MB</span></div>
-                    <div class="legend-item"><span class="dot dot-docs"></span> Dokumen <span id="valDocs" class="val-text">0 MB</span></div>
-                    <div class="legend-item"><span class="dot dot-others"></span> Lainnya <span id="valOthers" class="val-text">0 MB</span></div>
+                    <div class="legend-item">
+                        <div class="legend-info"><span class="dot dot-images"></span> Gambar</div>
+                        <span id="valImages" class="val-text">0 MB</span>
+                    </div>
+                    <div class="legend-item">
+                        <div class="legend-info"><span class="dot dot-videos"></span> Video</div>
+                        <span id="valVideos" class="val-text">0 MB</span>
+                    </div>
+                    <div class="legend-item">
+                        <div class="legend-info"><span class="dot dot-docs"></span> Dokumen</div>
+                        <span id="valDocs" class="val-text">0 MB</span>
+                    </div>
+                    <div class="legend-item">
+                        <div class="legend-info"><span class="dot dot-others"></span> Lainnya</div>
+                        <span id="valOthers" class="val-text">0 MB</span>
+                    </div>
                 </div>
+
+                <div class="storage-cta">
+                    <button class="btn-pill secondary" onclick="alert('Fitur bersihkan sampah akan segera hadir!')">Kosongkan ruang penyimpanan</button>
+                    <button class="btn-pill secondary text-blue" onclick="alert('Upgrade paket akan segera hadir!')">Dapatkan penyimpanan ekstra</button>
+                 </div>
             </div>
         </div>
     </div>
