--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 </div>
 
                 <div class="storage-col-right">
+                    
                     <div class="storage-legend">
                         <div class="legend-row">
                             <div class="legend-label"><span class="dot dot-images"></span> Gambar</div>
@@ -214,9 +215,10 @@
                     </div>
 
                     <div class="storage-actions-vertical">
-                        <button class="btn-rect secondary-dark" onclick="alert('Fitur ini akan segera hadir')">Kosongkan ruang</button>
-                        <button class="btn-rect primary-dark" onclick="alert('Fitur upgrade akan segera hadir')">Dapatkan ekstra</button>
+                        <button class="btn-rect secondary-dark" onclick="alert('Fitur ini akan segera hadir')">Kosongkan ruang penyimpanan</button>
+                        <button class="btn-rect primary-dark" onclick="alert('Fitur upgrade akan segera hadir')">Dapatkan penyimpanan ekstra</button>
                     </div>
+
                 </div>
                 
             </div> </div>
