--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                         </div>
                     </div>
 
-                    <div class="storage-actions-vertical">
-                        <button class="btn-rect secondary-dark" onclick="alert('Fitur ini akan segera hadir')">Kosongkan ruang penyimpanan</button>
-                        <button class="btn-rect primary-dark" onclick="alert('Fitur upgrade akan segera hadir')">Dapatkan penyimpanan ekstra</button>
+                    <div class="storage-actions-row">
+                        <button class="btn-rect secondary-dark" onclick="alert('Fitur ini akan segera hadir')">Kosongkan ruang</button>
+                        <button class="btn-rect primary-dark" onclick="alert('Fitur upgrade akan segera hadir')">Dapatkan ekstra</button>
                     </div>
 
                 </div>
