--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
                         <div id="barDocs" class="bar-segment bar-docs" style="width: 0%"></div>
                         <div id="barOthers" class="bar-segment bar-others" style="width: 0%"></div>
                     </div>
+
+                    <div class="storage-btn-left-container">
+                        <button class="btn-rect secondary-dark" onclick="alert('Fitur ini akan segera hadir')">Kosongkan ruang penyimpanan</button>
+                    </div>
                 </div>
 
                 <div class="storage-col-right">
@@ -214,9 +218,8 @@
                         </div>
                     </div>
 
-                    <div class="storage-actions-row">
-                        <button class="btn-rect secondary-dark" onclick="alert('Fitur ini akan segera hadir')">Kosongkan ruang</button>
-                        <button class="btn-rect primary-dark" onclick="alert('Fitur upgrade akan segera hadir')">Dapatkan ekstra</button>
+                    <div class="storage-btn-right-container">
+                        <button class="btn-rect primary-dark" onclick="alert('Fitur upgrade akan segera hadir')">Dapatkan penyimpanan ekstra</button>
                     </div>
 
                 </div>
