--- a/index.html
+++ b/index.html
@@ -180,16 +180,18 @@
             <div class="storage-flex-container">
                 
                 <div class="storage-col-left">
-                    <div class="storage-hero">
-                        <h1 id="storageBigText">0 MB</h1>
-                        <p class="storage-sub-hero">dari 2 GB digunakan</p>
-                    </div>
+                    <div class="storage-content-wrapper">
+                        <div class="storage-hero">
+                            <h1 id="storageBigText">0 MB</h1>
+                            <p class="storage-sub-hero">dari 2 GB digunakan</p>
+                        </div>
 
-                    <div class="multi-color-progress">
-                        <div id="barImages" class="bar-segment bar-images" style="width: 0%"></div>
-                        <div id="barVideos" class="bar-segment bar-videos" style="width: 0%"></div>
-                        <div id="barDocs" class="bar-segment bar-docs" style="width: 0%"></div>
-                        <div id="barOthers" class="bar-segment bar-others" style="width: 0%"></div>
+                        <div class="multi-color-progress">
+                            <div id="barImages" class="bar-segment bar-images" style="width: 0%"></div>
+                            <div id="barVideos" class="bar-segment bar-videos" style="width: 0%"></div>
+                            <div id="barDocs" class="bar-segment bar-docs" style="width: 0%"></div>
+                            <div id="barOthers" class="bar-segment bar-others" style="width: 0%"></div>
+                        </div>
                     </div>
 
                     <div class="storage-btn-left-container">
