--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <p id="loadingText">Memproses...</p>
     </div>
 
+    <div id="customTooltip" class="custom-tooltip hidden">
+        <div class="tooltip-header" id="ttHeader">KATEGORI</div>
+        <div class="tooltip-size" id="ttSize">0 GB</div>
+        <div class="tooltip-desc" id="ttDesc">File yang disimpan di kategori ini.</div>
+    </div>
+
     <section id="loginPage" class="full-screen-center hidden">
         <div class="glass-card auth-card">
             <div class="auth-header">
