--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="customTooltip" class="custom-tooltip hidden">
         <div class="tooltip-header" id="ttHeader">KATEGORI</div>
         <div class="tooltip-size" id="ttSize">0 GB</div>
-        <div class="tooltip-desc" id="ttDesc">File yang disimpan di kategori ini.</div>
+        <div class="tooltip-desc" id="ttDesc">Deskripsi file disini.</div>
     </div>
 
     <section id="loginPage" class="full-screen-center hidden">
@@ -232,7 +232,8 @@
 
                 </div>
                 
-            </div> </div>
+            </div> 
+        </div>
     </div>
 
     <div id="fileContextMenu" class="context-menu-modern hidden">
