--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                             <div id="barVideos" class="bar-segment bar-videos" style="width: 0%"></div>
                             <div id="barDocs" class="bar-segment bar-docs" style="width: 0%"></div>
                             <div id="barOthers" class="bar-segment bar-others" style="width: 0%"></div>
+                            <div id="barFree" class="bar-segment bar-free" style="width: 100%"></div> 
                         </div>
                     </div>
 
